TPs/jour_2/01-network-policies/02-allow-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: voting
spec:
  podSelector: {}      # tous les pods du namespace
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      # Pas de 'to' => autorise vers kube-dns (namespace kube-system)
