TPs/jour_2/01-network-policies/03-allow-vote-to-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-vote-to-redis
  namespace: voting
spec:
  # Côté SORTANT : le pod vote peut envoyer vers redis:6379
  podSelector:
    matchLabels:
      app: vote
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: redis
      ports:
        - port: 6379
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-from-vote
  namespace: voting
spec:
  # Côté ENTRANT : redis accepte les connexions venant de vote
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: vote
        - podSelector:
            matchLabels:
              app: worker
      ports:
        - port: 6379
          protocol: TCP
